# freeciv-ai

./: .gitignore  AUTHORS  Makefile.am  agent.c  agent.h  ai_stub.c  ai_stub.h  autogen.sh  configure.ac  main  main.c  maple_ai_data.c  maple_ai_data.h  maple_ai_diplomacy.c  maple_ai_diplomacy.h  maple_ai_domestic.c  maple_ai_effects.c  maple_ai_json.c  maple_ai_json.h  maple_ai_player.c  maple_ai_player.h  maple_ai_settler.c  maple_ai_settler.h  maple_ai_tech.c  maple_ai_tech.h  maple_ai_tools.c  maple_ai_tools.h  serialize.c  serialize.h
maple/: Makefile.am  ai_stub.c  ai_stub.h  maple_ai_city.c  maple_ai_city.h  maple_ai_domestic.h  maple_ai_effects.h  maple_ai_hand.c  maple_ai_hand.h  maple_ai_military.c  maple_ai_military.h  maple_ai_player.h  maple_ai_settler.c  maple_ai_tools.c  maple_ai_tools.h  maple_ai_unit.c  maple_ai_unit.h
python/: .gitignore  README.md  data.py  embedding_dao.py  main.py  orchestrator.py  orchestrator.sh  requirements.txt  texts.pickle
tests/: run_tests.sh  test_agent.c  test_serialize.c
